[feat/create-update-records] Update records
