# proto/backend.pb.go
@@ -29,27 +29,28 @@ const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 func init() { proto.RegisterFile("backend.proto", fileDescriptor_5ab9ba5b8d8b2ba5) }
 
 var fileDescriptor_5ab9ba5b8d8b2ba5 = []byte{
-	// 310 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x91, 0x41, 0x4a, 0x03, 0x31,
-	0x14, 0x86, 0x51, 0xd1, 0x62, 0xda, 0x28, 0x46, 0x18, 0x25, 0x15, 0xc4, 0x01, 0x37, 0x2e, 0x26,
-	0x58, 0x77, 0xba, 0x1b, 0x15, 0xe9, 0x42, 0x0b, 0x23, 0xce, 0xc2, 0x5d, 0x66, 0xe6, 0x59, 0x47,
-	0x6d, 0x12, 0x27, 0x69, 0xa1, 0x94, 0x6e, 0xbc, 0x82, 0xa7, 0xf0, 0x3c, 0x5e, 0xc1, 0x83, 0xc8,
-	0x24, 0x51, 0x6a, 0x17, 0x42, 0x57, 0x8f, 0x3f, 0xef, 0xfd, 0xdf, 0xff, 0x43, 0x10, 0xce, 0x78,
-	0xfe, 0x0c, 0xa2, 0x88, 0x54, 0x25, 0x8d, 0x24, 0xab, 0x76, 0xd0, 0x76, 0x5f, 0xca, 0xfe, 0x0b,
-	0x30, 0xab, 0xb2, 0xe1, 0x03, 0x83, 0x81, 0x32, 0x63, 0x77, 0x43, 0xf7, 0xfc, 0x92, 0xab, 0x92,
-	0x71, 0x21, 0xa4, 0xe1, 0xa6, 0x94, 0x42, 0xfb, 0x6d, 0x4b, 0xe7, 0x8f, 0x30, 0xe0, 0x4e, 0x75,
-	0x3e, 0x56, 0x50, 0x23, 0x76, 0x09, 0xe4, 0x06, 0x35, 0x52, 0xa8, 0x74, 0x29, 0x05, 0x09, 0x22,
-	0xc7, 0x88, 0x7e, 0x02, 0xa2, 0xcb, 0x3a, 0x80, 0x06, 0xee, 0x21, 0xf2, 0x77, 0x09, 0x68, 0x25,
-	0x85, 0x86, 0x70, 0xfb, 0xed, 0xf3, 0xeb, 0x7d, 0x19, 0x93, 0x26, 0x1b, 0x1d, 0xb3, 0x91, 0x87,
-	0xf4, 0x50, 0xeb, 0xbc, 0x02, 0x6e, 0xe0, 0xd6, 0x26, 0x12, 0xec, 0xcd, 0x4e, 0xd2, 0xbf, 0x32,
-	0x3c, 0xb0, 0x88, 0x76, 0x18, 0xd4, 0x08, 0xd7, 0x91, 0x4d, 0x54, 0x25, 0x9f, 0x20, 0x37, 0xdd,
-	0x8b, 0xe9, 0xe9, 0xd2, 0x11, 0xb9, 0x46, 0xeb, 0x57, 0x60, 0x3c, 0x6d, 0xd7, 0xdb, 0x13, 0x78,
-	0x1d, 0x82, 0x36, 0xbd, 0xac, 0x3e, 0x8c, 0xc7, 0xdd, 0x62, 0x1e, 0xbc, 0x63, 0xc1, 0x5b, 0x64,
-	0x73, 0x16, 0x5c, 0x16, 0x53, 0x92, 0x22, 0xec, 0xfa, 0x25, 0x90, 0xcb, 0xaa, 0xd0, 0x64, 0xe3,
-	0x17, 0x69, 0x35, 0x9d, 0xd3, 0xe1, 0xa1, 0x25, 0xed, 0x87, 0xb4, 0x26, 0xcd, 0x74, 0x63, 0x13,
-	0x87, 0xf5, 0x35, 0x53, 0x84, 0xef, 0x54, 0xb1, 0x38, 0xb7, 0xf3, 0x3f, 0x37, 0xc6, 0xf7, 0x4d,
-	0xeb, 0x3b, 0x73, 0x9f, 0xb2, 0x66, 0xc7, 0xc9, 0x77, 0x00, 0x00, 0x00, 0xff, 0xff, 0x9b, 0xaf,
-	0x59, 0x88, 0x22, 0x02, 0x00, 0x00,
+	// 326 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x91, 0xc1, 0x4e, 0x02, 0x31,
+	0x10, 0x86, 0x83, 0x46, 0x89, 0x85, 0xd5, 0x58, 0x13, 0x34, 0x8b, 0x17, 0xf7, 0xa4, 0x24, 0xee,
+	0x46, 0xf0, 0x84, 0x37, 0xd4, 0x18, 0x0e, 0x4a, 0x82, 0xd1, 0x83, 0xb7, 0xb2, 0x3b, 0xe2, 0xaa,
+	0xb4, 0xb5, 0x2d, 0x24, 0xc4, 0x70, 0xf1, 0x15, 0x7c, 0x24, 0x1f, 0xc1, 0x57, 0xf0, 0x41, 0x4c,
+	0x3b, 0x75, 0x03, 0x9c, 0x3c, 0x4d, 0xbe, 0xce, 0xcc, 0xf7, 0x4f, 0x76, 0x49, 0x30, 0x60, 0xe9,
+	0x0b, 0xf0, 0x2c, 0x96, 0x4a, 0x18, 0x41, 0xd7, 0x5c, 0x09, 0xeb, 0x43, 0x21, 0x86, 0xaf, 0x90,
+	0x38, 0x1a, 0x8c, 0x1f, 0x13, 0x18, 0x49, 0x33, 0xc5, 0x99, 0x70, 0xdf, 0x37, 0x99, 0xcc, 0x13,
+	0xc6, 0xb9, 0x30, 0xcc, 0xe4, 0x82, 0x6b, 0xdf, 0xad, 0xea, 0xf4, 0x09, 0x46, 0x0c, 0xa9, 0xf9,
+	0xb5, 0x4a, 0xca, 0x1d, 0x4c, 0xa0, 0x37, 0xa4, 0x7c, 0x0f, 0x4a, 0xe7, 0x82, 0xd3, 0x5a, 0x8c,
+	0x8e, 0xf8, 0x2f, 0x20, 0xbe, 0xb4, 0x01, 0x61, 0x0d, 0x1f, 0x62, 0x3f, 0xd7, 0x07, 0x2d, 0x05,
+	0xd7, 0x10, 0xed, 0x7c, 0x7c, 0xff, 0x7c, 0xae, 0x04, 0xb4, 0x92, 0x4c, 0x4e, 0x92, 0x89, 0x97,
+	0xf4, 0x48, 0xf5, 0x5c, 0x01, 0x33, 0x70, 0xeb, 0x12, 0x69, 0xe0, 0x97, 0x11, 0xc3, 0x45, 0x8c,
+	0x0e, 0x9c, 0xa2, 0x1e, 0xd5, 0xac, 0x02, 0x6f, 0x4c, 0xde, 0xa5, 0x12, 0xcf, 0x90, 0x9a, 0xee,
+	0xc5, 0xac, 0x5d, 0x6a, 0xd0, 0x6b, 0xb2, 0x71, 0x05, 0xc6, 0xdb, 0xf6, 0xfc, 0x7a, 0x1f, 0xde,
+	0xc6, 0xa0, 0x4d, 0x6f, 0x60, 0x07, 0x3b, 0xd3, 0x6e, 0xb6, 0x2c, 0xde, 0x75, 0xe2, 0x6d, 0xba,
+	0x35, 0x2f, 0xce, 0xb3, 0x19, 0x05, 0x12, 0xe0, 0x7d, 0x7d, 0x48, 0x85, 0xca, 0x34, 0xdd, 0x2c,
+	0x94, 0x8e, 0xc3, 0x25, 0x8e, 0x4e, 0x9d, 0x29, 0x8e, 0x8e, 0xac, 0x69, 0xee, 0xb6, 0xc2, 0x8a,
+	0xd5, 0xbe, 0x28, 0x5c, 0xb1, 0x57, 0x33, 0x52, 0xbd, 0x93, 0x59, 0x11, 0x53, 0x7c, 0x06, 0xc4,
+	0x70, 0x11, 0xa3, 0x96, 0xcb, 0x38, 0x6e, 0x1e, 0xfe, 0x37, 0xa3, 0x5d, 0x6a, 0x74, 0x82, 0x87,
+	0x8a, 0x93, 0x9c, 0xe1, 0xef, 0x5a, 0x77, 0xa5, 0xf5, 0x1b, 0x00, 0x00, 0xff, 0xff, 0xf2, 0xa1,
+	0x67, 0xa9, 0x3c, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -72,8 +73,8 @@ type BackendClient interface {
 	GetSchema(ctx context.Context, in *RequestObjectById, opts ...grpc.CallOption) (*Schema, error)
 	// CreateRecords
 	CreateRecords(ctx context.Context, in *Records, opts ...grpc.CallOption) (*Records, error)
-	// UpdateRecords
-	UpdateRecords(ctx context.Context, in *Records, opts ...grpc.CallOption) (*Records, error)
+	// UpdateRecord
+	UpdateRecord(ctx context.Context, in *Record, opts ...grpc.CallOption) (*Record, error)
 }
 
 type backendClient struct {
@@ -120,9 +121,9 @@ func (c *backendClient) CreateRecords(ctx context.Context, in *Records, opts ...
 	return out, nil
 }
 
-func (c *backendClient) UpdateRecords(ctx context.Context, in *Records, opts ...grpc.CallOption) (*Records, error) {
-	out := new(Records)
-	err := c.cc.Invoke(ctx, "/proto.Backend/UpdateRecords", in, out, opts...)
+func (c *backendClient) UpdateRecord(ctx context.Context, in *Record, opts ...grpc.CallOption) (*Record, error) {
+	out := new(Record)
+	err := c.cc.Invoke(ctx, "/proto.Backend/UpdateRecord", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -139,8 +140,8 @@ type BackendServer interface {
 	GetSchema(context.Context, *RequestObjectById) (*Schema, error)
 	// CreateRecords
 	CreateRecords(context.Context, *Records) (*Records, error)
-	// UpdateRecords
-	UpdateRecords(context.Context, *Records) (*Records, error)
+	// UpdateRecord
+	UpdateRecord(context.Context, *Record) (*Record, error)
 }
 
 // UnimplementedBackendServer can be embedded to have forward compatible implementations.
@@ -159,8 +160,8 @@ func (*UnimplementedBackendServer) GetSchema(ctx context.Context, req *RequestOb
 func (*UnimplementedBackendServer) CreateRecords(ctx context.Context, req *Records) (*Records, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateRecords not implemented")
 }
-func (*UnimplementedBackendServer) UpdateRecords(ctx context.Context, req *Records) (*Records, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method UpdateRecords not implemented")
+func (*UnimplementedBackendServer) UpdateRecord(ctx context.Context, req *Record) (*Record, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateRecord not implemented")
 }
 
 func RegisterBackendServer(s *grpc.Server, srv BackendServer) {
@@ -239,20 +240,20 @@ func _Backend_CreateRecords_Handler(srv interface{}, ctx context.Context, dec fu
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Backend_UpdateRecords_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(Records)
+func _Backend_UpdateRecord_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Record)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(BackendServer).UpdateRecords(ctx, in)
+		return srv.(BackendServer).UpdateRecord(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/proto.Backend/UpdateRecords",
+		FullMethod: "/proto.Backend/UpdateRecord",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(BackendServer).UpdateRecords(ctx, req.(*Records))
+		return srv.(BackendServer).UpdateRecord(ctx, req.(*Record))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -278,8 +279,8 @@ var _Backend_serviceDesc = grpc.ServiceDesc{
 			Handler:    _Backend_CreateRecords_Handler,
 		},
 		{
-			MethodName: "UpdateRecords",
-			Handler:    _Backend_UpdateRecords_Handler,
+			MethodName: "UpdateRecord",
+			Handler:    _Backend_UpdateRecord_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
