# proto/backend.swagger.json
@@ -4,6 +4,10 @@
     "title": "backend.proto",
     "version": "version not set"
   },
+  "schemes": [
+    "http",
+    "https"
+  ],
   "consumes": [
     "application/json"
   ],
@@ -86,15 +90,15 @@
         ]
       }
     },
-    "/v1/{projectID}/{schemaID}": {
-      "post": {
-        "summary": "CreateRecords",
-        "operationId": "CreateRecords",
+    "/v1/{projectID}/schema/{schemaID}/record": {
+      "patch": {
+        "summary": "UpdateRecord",
+        "operationId": "UpdateRecord",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/protoRecords"
+              "$ref": "#/definitions/protoRecord"
             }
           }
         },
@@ -116,17 +120,19 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/protoRecords"
+              "$ref": "#/definitions/protoRecord"
             }
           }
         ],
         "tags": [
           "Backend"
         ]
-      },
-      "patch": {
-        "summary": "UpdateRecords",
-        "operationId": "UpdateRecords",
+      }
+    },
+    "/v1/{projectID}/schema/{schemaID}/records": {
+      "post": {
+        "summary": "CreateRecords",
+        "operationId": "CreateRecords",
         "responses": {
           "200": {
             "description": "A successful response.",
@@ -171,7 +177,13 @@
           "type": "string"
         },
         "fields": {
-          "type": "object"
+          "$ref": "#/definitions/protobufStruct"
+        },
+        "projectID": {
+          "type": "string"
+        },
+        "schemaID": {
+          "type": "string"
         }
       }
     },
@@ -201,7 +213,7 @@
         "properties": {
           "type": "object",
           "additionalProperties": {
-            "type": "object"
+            "$ref": "#/definitions/protobufStruct"
           }
         },
         "required": {
@@ -229,6 +241,19 @@
         }
       }
     },
+    "protobufListValue": {
+      "type": "object",
+      "properties": {
+        "values": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protobufValue"
+          },
+          "description": "Repeated field of dynamically typed values."
+        }
+      },
+      "description": "`ListValue` is a wrapper around a repeated field of values.\n\nThe JSON representation for `ListValue` is JSON array."
+    },
     "protobufNullValue": {
       "type": "string",
       "enum": [
@@ -236,6 +261,51 @@
       ],
       "default": "NULL_VALUE",
       "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\n The JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
+    },
+    "protobufStruct": {
+      "type": "object",
+      "properties": {
+        "fields": {
+          "type": "object",
+          "additionalProperties": {
+            "$ref": "#/definitions/protobufValue"
+          },
+          "description": "Unordered map of dynamically typed values."
+        }
+      },
+      "description": "`Struct` represents a structured data value, consisting of fields\nwhich map to dynamically typed values. In some languages, `Struct`\nmight be supported by a native representation. For example, in\nscripting languages like JS a struct is represented as an\nobject. The details of that representation are described together\nwith the proto support for the language.\n\nThe JSON representation for `Struct` is JSON object."
+    },
+    "protobufValue": {
+      "type": "object",
+      "properties": {
+        "null_value": {
+          "$ref": "#/definitions/protobufNullValue",
+          "description": "Represents a null value."
+        },
+        "number_value": {
+          "type": "number",
+          "format": "double",
+          "description": "Represents a double value."
+        },
+        "string_value": {
+          "type": "string",
+          "description": "Represents a string value."
+        },
+        "bool_value": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "Represents a boolean value."
+        },
+        "struct_value": {
+          "$ref": "#/definitions/protobufStruct",
+          "description": "Represents a structured value."
+        },
+        "list_value": {
+          "$ref": "#/definitions/protobufListValue",
+          "description": "Represents a repeated `Value`."
+        }
+      },
+      "description": "`Value` represents a dynamically typed value which can be either\nnull, a number, a string, a boolean, a recursive struct value, or a\nlist of values. A producer of value is expected to set one of that\nvariants, absence of any variant indicates an error.\n\nThe JSON representation for `Value` is JSON value."
     }
   }
 }
