# proto/schema.pb.go
@@ -647,6 +647,8 @@ func (m *Records) GetRecords() []*Record {
 type Record struct {
 	Id                   string          `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
 	Fields               *_struct.Struct `protobuf:"bytes,2,opt,name=fields,proto3" json:"fields,omitempty"`
+	ProjectID            string          `protobuf:"bytes,3,opt,name=projectID,proto3" json:"projectID,omitempty"`
+	SchemaID             string          `protobuf:"bytes,4,opt,name=schemaID,proto3" json:"schemaID,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}        `json:"-"`
 	XXX_unrecognized     []byte          `json:"-"`
 	XXX_sizecache        int32           `json:"-"`
@@ -691,6 +693,20 @@ func (m *Record) GetFields() *_struct.Struct {
 	return nil
 }
 
+func (m *Record) GetProjectID() string {
+	if m != nil {
+		return m.ProjectID
+	}
+	return ""
+}
+
+func (m *Record) GetSchemaID() string {
+	if m != nil {
+		return m.SchemaID
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterType((*VersionResponse)(nil), "proto.VersionResponse")
 	proto.RegisterType((*RequestObjectById)(nil), "proto.RequestObjectById")
@@ -709,43 +725,44 @@ func init() {
 func init() { proto.RegisterFile("schema.proto", fileDescriptor_1c5fb4d8cc22d66a) }
 
 var fileDescriptor_1c5fb4d8cc22d66a = []byte{
-	// 597 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x54, 0x4d, 0x6f, 0xd4, 0x30,
-	0x10, 0x95, 0x93, 0xdd, 0x6c, 0x33, 0x69, 0x29, 0x58, 0x15, 0x84, 0x55, 0x91, 0xa2, 0x70, 0x68,
-	0x2e, 0xa4, 0x52, 0xb9, 0x20, 0x10, 0x07, 0xda, 0x82, 0xb4, 0x12, 0x12, 0xc8, 0xad, 0x7a, 0xe0,
-	0x96, 0x6e, 0x66, 0xb7, 0x86, 0xc4, 0x4e, 0x1d, 0xa7, 0xea, 0xfe, 0x0a, 0xc4, 0x09, 0x7e, 0x21,
-	0xbf, 0x03, 0xad, 0x9d, 0x74, 0xdb, 0xed, 0x07, 0x12, 0xe5, 0x14, 0xbf, 0x79, 0xe3, 0xc9, 0x9b,
-	0x67, 0x7b, 0x60, 0xb5, 0x1e, 0x9f, 0x60, 0x99, 0xa5, 0x95, 0x92, 0x5a, 0xd2, 0xbe, 0xf9, 0x0c,
-	0x37, 0xa7, 0x52, 0x4e, 0x0b, 0xdc, 0x36, 0xe8, 0xb8, 0x99, 0x6c, 0xd7, 0x5a, 0x35, 0x63, 0x6d,
-	0x93, 0x86, 0x4f, 0x97, 0xd9, 0x4c, 0xcc, 0x2c, 0x15, 0x6f, 0xc1, 0xfa, 0x11, 0xaa, 0x9a, 0x4b,
-	0xc1, 0xb0, 0xae, 0xa4, 0xa8, 0x91, 0x6e, 0x40, 0xff, 0x2c, 0x2b, 0x1a, 0x0c, 0x49, 0x44, 0x12,
-	0x9f, 0x59, 0x10, 0x3f, 0x87, 0x47, 0x0c, 0x4f, 0x1b, 0xac, 0xf5, 0xa7, 0xe3, 0xaf, 0x38, 0xd6,
-	0xbb, 0xb3, 0x51, 0x4e, 0x1f, 0x80, 0xc3, 0xf3, 0x36, 0xcf, 0xe1, 0x79, 0xfc, 0x9b, 0x80, 0xb7,
-	0x27, 0x8b, 0xa6, 0x14, 0x94, 0x42, 0x4f, 0xcf, 0xaa, 0xae, 0x88, 0x59, 0xd3, 0x4d, 0xf0, 0x4b,
-	0x2e, 0x3e, 0xa2, 0x98, 0xea, 0x93, 0xd0, 0x89, 0x48, 0xd2, 0x67, 0x8b, 0x80, 0x61, 0xb3, 0xf3,
-	0x96, 0x75, 0x5b, 0xb6, 0x0b, 0xd0, 0x10, 0x06, 0x25, 0x17, 0xbc, 0x6c, 0xca, 0xb0, 0x17, 0x91,
-	0xc4, 0x65, 0x1d, 0x34, 0x4c, 0x76, 0x6e, 0x98, 0x7e, 0xcb, 0x58, 0x48, 0x53, 0x18, 0xe4, 0x38,
-	0xc9, 0x9a, 0x42, 0x87, 0x5e, 0x44, 0x92, 0x60, 0x67, 0x23, 0xb5, 0x4e, 0xa4, 0x9d, 0x13, 0xe9,
-	0x3b, 0x31, 0x63, 0x5d, 0x12, 0x4d, 0xa0, 0x87, 0xa2, 0x29, 0xc3, 0xc1, 0x1d, 0xc9, 0x26, 0x23,
-	0xfe, 0x45, 0x00, 0x0e, 0xb4, 0xe2, 0x62, 0x7a, 0x38, 0x6f, 0xec, 0xa6, 0x66, 0x23, 0x08, 0x72,
-	0xac, 0xc7, 0x8a, 0x57, 0x9a, 0x4b, 0x61, 0xda, 0xf5, 0xd9, 0xe5, 0xd0, 0x55, 0x3b, 0xdc, 0x3b,
-	0xed, 0xe8, 0xdd, 0x60, 0x47, 0xd7, 0x5a, 0xdf, 0x54, 0xee, 0x60, 0xfc, 0x83, 0x40, 0x30, 0x12,
-	0x1a, 0xa7, 0xa8, 0xee, 0xa1, 0xed, 0x92, 0xdd, 0xee, 0xad, 0x76, 0xf7, 0xae, 0xda, 0xbd, 0xa4,
-	0xc9, 0x5d, 0x68, 0xfa, 0x4e, 0xc0, 0xff, 0x50, 0xc8, 0x4c, 0xff, 0x3f, 0x45, 0xe4, 0x56, 0x45,
-	0xe4, 0x56, 0x45, 0x64, 0xa1, 0xe8, 0x0c, 0x56, 0xf7, 0x33, 0x8d, 0x87, 0xbc, 0xc4, 0xfb, 0x69,
-	0xba, 0xf9, 0x14, 0xe8, 0x63, 0xf0, 0x26, 0x52, 0x95, 0x99, 0xbd, 0x79, 0x3e, 0x6b, 0x51, 0xbc,
-	0x07, 0xc1, 0xae, 0x94, 0x05, 0x66, 0xe2, 0xdf, 0x7f, 0x1b, 0xff, 0x74, 0xc0, 0x3b, 0x30, 0x53,
-	0x60, 0xf9, 0x05, 0xd2, 0xb7, 0x00, 0x95, 0x92, 0x15, 0x2a, 0xcd, 0xb1, 0x0e, 0x9d, 0xc8, 0x4d,
-	0x82, 0x9d, 0x67, 0xf6, 0x06, 0xa7, 0x76, 0x4b, 0xfa, 0xf9, 0x82, 0x7f, 0x2f, 0xb4, 0x9a, 0xb1,
-	0x4b, 0x1b, 0xe8, 0x10, 0x56, 0x14, 0x9e, 0x36, 0x5c, 0x61, 0x1e, 0xba, 0x91, 0x9b, 0xf8, 0xec,
-	0x02, 0xcf, 0xb5, 0x8a, 0xac, 0x44, 0xe3, 0xb1, 0xcf, 0xcc, 0x7a, 0x7e, 0x49, 0x2b, 0x25, 0xe7,
-	0xf3, 0x60, 0xb4, 0xdf, 0x5a, 0xb0, 0x08, 0xcc, 0xed, 0x39, 0xb3, 0xc3, 0xa5, 0x75, 0xa1, 0x83,
-	0xc3, 0x23, 0x58, 0x5f, 0x92, 0x41, 0x1f, 0x82, 0xfb, 0x0d, 0x67, 0x6d, 0x2b, 0xf3, 0x25, 0x7d,
-	0xd1, 0x0d, 0x22, 0xc7, 0xbc, 0xc7, 0x27, 0xd7, 0xde, 0xe3, 0x81, 0x19, 0x72, 0xed, 0x84, 0x7a,
-	0xed, 0xbc, 0x22, 0x71, 0x01, 0x03, 0x86, 0x63, 0xa9, 0xf2, 0xfa, 0xaa, 0x34, 0xb2, 0x2c, 0x6d,
-	0x08, 0x2b, 0x76, 0x8e, 0x8e, 0xf6, 0x5b, 0x87, 0x2f, 0x30, 0xdd, 0x82, 0x81, 0xb2, 0x45, 0x8c,
-	0x07, 0xc1, 0xce, 0x5a, 0x6b, 0xa0, 0x2d, 0xcd, 0x3a, 0x36, 0x1e, 0x81, 0x67, 0x43, 0xd7, 0x8e,
-	0x61, 0x1b, 0xbc, 0x09, 0xc7, 0x22, 0xaf, 0xff, 0xa6, 0xbd, 0x4d, 0xdb, 0x5d, 0xfb, 0x12, 0x18,
-	0xea, 0x8d, 0x4d, 0xf0, 0xcc, 0xe7, 0xe5, 0x9f, 0x00, 0x00, 0x00, 0xff, 0xff, 0xe6, 0x36, 0x4a,
-	0x5a, 0xed, 0x05, 0x00, 0x00,
+	// 611 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x54, 0x4d, 0x6f, 0xd4, 0x3a,
+	0x14, 0x95, 0x93, 0x99, 0x4c, 0x73, 0xd3, 0xbe, 0xbe, 0x67, 0x55, 0xef, 0xe5, 0x8d, 0x8a, 0x14,
+	0x85, 0x45, 0xb3, 0x21, 0x95, 0xca, 0x06, 0x81, 0x58, 0xd0, 0x16, 0xa4, 0x91, 0x90, 0x40, 0x6e,
+	0xd5, 0x05, 0xbb, 0x74, 0x72, 0x67, 0x6a, 0x48, 0xec, 0xd4, 0x71, 0xaa, 0xce, 0x9a, 0x1f, 0x80,
+	0x58, 0xc1, 0x2f, 0xe4, 0x77, 0xa0, 0xb1, 0x93, 0x4e, 0x67, 0xfa, 0x81, 0x44, 0x59, 0xc5, 0xe7,
+	0x9e, 0xeb, 0x9b, 0x73, 0x8f, 0xed, 0x0b, 0xeb, 0xf5, 0xf8, 0x0c, 0xcb, 0x2c, 0xad, 0x94, 0xd4,
+	0x92, 0xf6, 0xcd, 0x67, 0xb8, 0x3d, 0x95, 0x72, 0x5a, 0xe0, 0xae, 0x41, 0xa7, 0xcd, 0x64, 0xb7,
+	0xd6, 0xaa, 0x19, 0x6b, 0x9b, 0x34, 0xfc, 0x7f, 0x95, 0xcd, 0xc4, 0xcc, 0x52, 0xf1, 0x0e, 0x6c,
+	0x9e, 0xa0, 0xaa, 0xb9, 0x14, 0x0c, 0xeb, 0x4a, 0x8a, 0x1a, 0xe9, 0x16, 0xf4, 0x2f, 0xb2, 0xa2,
+	0xc1, 0x90, 0x44, 0x24, 0xf1, 0x99, 0x05, 0xf1, 0x63, 0xf8, 0x87, 0xe1, 0x79, 0x83, 0xb5, 0x7e,
+	0x77, 0xfa, 0x11, 0xc7, 0x7a, 0x7f, 0x36, 0xca, 0xe9, 0x5f, 0xe0, 0xf0, 0xbc, 0xcd, 0x73, 0x78,
+	0x1e, 0xff, 0x20, 0xe0, 0x1d, 0xc8, 0xa2, 0x29, 0x05, 0xa5, 0xd0, 0xd3, 0xb3, 0xaa, 0x2b, 0x62,
+	0xd6, 0x74, 0x1b, 0xfc, 0x92, 0x8b, 0xb7, 0x28, 0xa6, 0xfa, 0x2c, 0x74, 0x22, 0x92, 0xf4, 0xd9,
+	0x22, 0x60, 0xd8, 0xec, 0xb2, 0x65, 0xdd, 0x96, 0xed, 0x02, 0x34, 0x84, 0x41, 0xc9, 0x05, 0x2f,
+	0x9b, 0x32, 0xec, 0x45, 0x24, 0x71, 0x59, 0x07, 0x0d, 0x93, 0x5d, 0x1a, 0xa6, 0xdf, 0x32, 0x16,
+	0xd2, 0x14, 0x06, 0x39, 0x4e, 0xb2, 0xa6, 0xd0, 0xa1, 0x17, 0x91, 0x24, 0xd8, 0xdb, 0x4a, 0xad,
+	0x13, 0x69, 0xe7, 0x44, 0xfa, 0x4a, 0xcc, 0x58, 0x97, 0x44, 0x13, 0xe8, 0xa1, 0x68, 0xca, 0x70,
+	0x70, 0x4f, 0xb2, 0xc9, 0x88, 0xbf, 0x13, 0x80, 0x23, 0xad, 0xb8, 0x98, 0x1e, 0xcf, 0x1b, 0xbb,
+	0xad, 0xd9, 0x08, 0x82, 0x1c, 0xeb, 0xb1, 0xe2, 0x95, 0xe6, 0x52, 0x98, 0x76, 0x7d, 0x76, 0x3d,
+	0xb4, 0x6c, 0x87, 0x7b, 0xaf, 0x1d, 0xbd, 0x5b, 0xec, 0xe8, 0x5a, 0xeb, 0x9b, 0xca, 0x1d, 0x8c,
+	0xbf, 0x12, 0x08, 0x46, 0x42, 0xe3, 0x14, 0xd5, 0x03, 0xb4, 0x5d, 0xb3, 0xdb, 0xbd, 0xd3, 0xee,
+	0xde, 0xb2, 0xdd, 0x2b, 0x9a, 0xdc, 0x85, 0xa6, 0x2f, 0x04, 0xfc, 0x37, 0x85, 0xcc, 0xf4, 0x9f,
+	0x53, 0x44, 0xee, 0x54, 0x44, 0xee, 0x54, 0x44, 0x16, 0x8a, 0x2e, 0x60, 0xfd, 0x30, 0xd3, 0x78,
+	0xcc, 0x4b, 0x7c, 0x98, 0xa6, 0xdb, 0x4f, 0x81, 0xfe, 0x0b, 0xde, 0x44, 0xaa, 0x32, 0xb3, 0x37,
+	0xcf, 0x67, 0x2d, 0x8a, 0x0f, 0x20, 0xd8, 0x97, 0xb2, 0xc0, 0x4c, 0xfc, 0xfe, 0x6f, 0xe3, 0x6f,
+	0x0e, 0x78, 0x47, 0x66, 0x0a, 0xac, 0xbe, 0x40, 0xfa, 0x12, 0xa0, 0x52, 0xb2, 0x42, 0xa5, 0x39,
+	0xd6, 0xa1, 0x13, 0xb9, 0x49, 0xb0, 0xf7, 0xc8, 0xde, 0xe0, 0xd4, 0x6e, 0x49, 0xdf, 0x5f, 0xf1,
+	0xaf, 0x85, 0x56, 0x33, 0x76, 0x6d, 0x03, 0x1d, 0xc2, 0x9a, 0xc2, 0xf3, 0x86, 0x2b, 0xcc, 0x43,
+	0x37, 0x72, 0x13, 0x9f, 0x5d, 0xe1, 0xb9, 0x56, 0x91, 0x95, 0x68, 0x3c, 0xf6, 0x99, 0x59, 0xcf,
+	0x2f, 0x69, 0xa5, 0xe4, 0x7c, 0x1e, 0x8c, 0x0e, 0x5b, 0x0b, 0x16, 0x81, 0xb9, 0x3d, 0x17, 0x76,
+	0xb8, 0xb4, 0x2e, 0x74, 0x70, 0x78, 0x02, 0x9b, 0x2b, 0x32, 0xe8, 0xdf, 0xe0, 0x7e, 0xc2, 0x59,
+	0xdb, 0xca, 0x7c, 0x49, 0x9f, 0x74, 0x83, 0xc8, 0x31, 0xef, 0xf1, 0xbf, 0x1b, 0xef, 0xf1, 0xc8,
+	0x0c, 0xb9, 0x76, 0x42, 0x3d, 0x77, 0x9e, 0x91, 0xb8, 0x80, 0x01, 0xc3, 0xb1, 0x54, 0x79, 0xbd,
+	0x2c, 0x8d, 0xac, 0x4a, 0x1b, 0xc2, 0x9a, 0x9d, 0xa3, 0xa3, 0xc3, 0xd6, 0xe1, 0x2b, 0x4c, 0x77,
+	0x60, 0xa0, 0x6c, 0x11, 0xe3, 0x41, 0xb0, 0xb7, 0xd1, 0x1a, 0x68, 0x4b, 0xb3, 0x8e, 0x8d, 0x3f,
+	0x13, 0xf0, 0x6c, 0xec, 0xc6, 0x39, 0xec, 0x82, 0x37, 0xe1, 0x58, 0xe4, 0xf5, 0xaf, 0xc4, 0xb7,
+	0x69, 0xcb, 0x72, 0xdd, 0xfb, 0xe4, 0xf6, 0x96, 0xe5, 0xee, 0x6f, 0x7c, 0x08, 0x4c, 0xd1, 0x17,
+	0xb6, 0xb4, 0x67, 0x3e, 0x4f, 0x7f, 0x06, 0x00, 0x00, 0xff, 0xff, 0x22, 0xb4, 0x8f, 0xd3, 0x28,
+	0x06, 0x00, 0x00,
 }
